--- a/app/globals.css
+++ b/app/globals.css
@@ -169,6 +169,24 @@
     letter-spacing: var(--tracking-normal);
   }
 }
+.bg-dotted {
+  width: 100%;
+  height: 100%;
+  /* Add your background pattern here */
+  background-color: var(--secondary);
+  background-image:
+    radial-gradient(var(--foreground) 10%, transparent 10%),
+    radial-gradient(var(--foreground) 10%, transparent 10%);
+  background-size: 20px 20px;
+  background-position:
+    0 0,
+    50px 50px;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
 /* start Navbar */
 .text {
   font-size: 10vw;
@@ -269,3 +287,152 @@
 }
 
 /* End Hero */
+
+/* start About */
+/* .split-text {
+  opacity: 0;
+  will-change: transform;
+}
+
+.line {
+  overflow: hidden;
+}
+
+.line > * {
+  will-change: transform;
+} */
+
+.about-btn {
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+  background: linear-gradient(#1f5afe, #0f4cf5);
+  color: white;
+  box-shadow:
+    inset 0pt 4pt 3pt -2pt #386fff,
+    0pt 4pt 5pt -3pt #0009;
+  border-bottom: 2pt solid #083acd;
+  transition: all 0.5s ease;
+}
+
+.about-btn:hover {
+  border-bottom: 4pt solid #083acd;
+  translate: 0pt -1pt;
+}
+
+.about-btn:active {
+  box-shadow:
+    inset 0pt 4pt 3pt -2pt #386fff,
+    0pt 4pt 5pt -3pt #0000;
+  border-bottom: 1pt solid #083acd;
+  translate: 0pt 0pt;
+}
+
+/* End About */
+
+/* start Projects */
+/* 
+:root {
+  --text-color: #111;
+  --bg-color: #b9b3a9;
+}
+
+body {
+  font-family: termina, sans-serif;
+  color: var(--text-color);
+  background: var(--bg-color);
+  transition: 0.3s ease-out;
+  overflow-x: hidden;
+  max-width: 100%;
+  width: 100%;
+  overscroll-behavior: none;
+} */
+
+/* section:not(#sectionPin) {
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 2rem;
+  padding: 50px 10vw;
+  margin: auto;
+  place-items: center;
+} */
+
+.project-image {
+  height: 80vh;
+  width: auto;
+  object-fit: cover;
+}
+
+h1 {
+  font-size: 5rem;
+  line-height: 1;
+  font-weight: 800;
+  margin-bottom: 1rem;
+  position: absolute;
+  top: 10vw;
+  left: 10vw;
+  z-index: 4;
+  overflow-wrap: break-word;
+  hyphens: auto;
+
+  @media (max-width: 768px) {
+    font-size: 16vw;
+  }
+
+  span {
+    display: block;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+  max-width: 400px;
+}
+
+.credit {
+  font-family: Termina, sans-serif;
+  a {
+    color: var(--text-color);
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+#sectionPin {
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  left: 0;
+  background: var(--text-color);
+  color: var(--bg-color);
+}
+
+.pin-wrap {
+  height: 100vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 50px 10vw;
+
+  & > * {
+    min-width: 60vw;
+    padding: 0 5vw;
+  }
+}
+
+.credit {
+  position: absolute;
+  bottom: 10vw;
+  right: 10vw;
+  width: 200px;
+  line-height: 1.5;
+}
+
+/* End Projects */
